--- a/3DSIM_Analysis_Pax.ipynb
+++ b/3DSIM_Analysis_Pax.ipynb
@@ -373,7 +373,7 @@
     "        site_filt = int(1.5*len_micron)\n",
     "\n",
     "        file_name = ''\n",
-    "        pods, sites = find_pod_and_sites_tda(actin,pod_filt,site_filt,plot_bool=False,plot_pers=False,save_file = file_name)\n",
+    "        pods, sites = find_pod_and_sites_ph(actin,pod_filt,site_filt,plot_bool=False,plot_pers=False,save_file = file_name)\n",
     "        all_pods.append([pods])\n",
     "        all_sites.append([sites])\n",
     "\n",
